# orchestrator

./: .clineignore  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README_STATUS.md  config_sync_profiles.yaml  integrations.yaml  justfile  mise.toml  mkdocs.yml  pyproject.toml  standards.yaml  tool_profiles.yaml  upstreams.yaml  workspace.yaml
.clinerules/: local-agent-ops.md
chains/: local-agent-chain.yaml
deploy/: Caddyfile.example  Dockerfile  cloudflared.config.example.yml  compose.yaml  substrate-community.service
docs/: ai-collaboration.md  ai-contributors.md  chains.md  community-cycle.md  community_status.html  deployment.md  dotfiles.md  index.md  integrations.md  learning.md  lifecycle.md  orchestrator.md  promotion-and-deploy-runbook.md  references.md  security-toolkit-roadmap.md  setup.md  standards.md  system-probe.md  tooling-rationale.md
openclaw_substrate_export_2026-04-24/: MANIFEST.json  ONE_BIG_PROMPT_WITH_SSH.txt  OPENCLAW_BOOTSTRAP_PROMPT.txt  OPS_CHECKLIST.sh  SECRETS_REQUIRED.env  SUBSTRATE_FULL_HANDOFF.md
prompts/: 01_scope.md  02_research.md  03_execute.md  04_review.md  cloud_agent_hybrid_operator.md
scripts/: agent_hybrid_publish.sh  agent_hybrid_runner.py  auto_community_cycle.sh  auto_git_sync.sh  bootstrap-local-agent-env.sh  daemon_loop.sh  developer_polish.sh  generate_cosmic_wallpapers.py  generate_status_page.py  inject_foundation_archive.py  install_developer_polish_timer.sh  package_substrate.py  probe-system.sh  probe_system.py  run_chain.py  run_local_container.sh  substrate_cli.py
(+79 files in other folders)
